# agent-skill-mcp

./: README.md
.claude-plugin/: marketplace.json  plugin.json
mcp/: README.md
mcp/biobridge/: biobridge_mcp_server.py  pixi.toml
mcp/primekg/: README.md  pixi.toml  primekg_server.py
mcp/ultra-inference/: README.md  download_checkpoint.sh  pixi.toml  ultra_inference_server.py
mcp/ultraquery-inference/: README.md  example_queries.py  pixi.toml  ultraquery_inference_server.py
skill/biobridge/: SKILL.md  pyproject.toml  test_workflow.sh
skill/biobridge/scripts/: characterize_kg.py  ensure_env.py  match_entity.py  predict_link.py  setup_env.sh  summarize_predictions.py
skill/cellxgene/: README.md  SKILL.md
skill/cortellis/: DOCUMENTATION_MAP.md  SKILL.md
skill/disease-module-analysis/: SKILL.md
skill/interactdb-query/: SKILL.md
skill/kg-association/: SKILL.md
skill/omicsoft-deg-analysis/: SKILL.md
skill/pathwaydb-query/: SKILL.md
skill/target-prioritization-report/: SKILL.md
skills/agenticboost-prompt/: SKILL.md
skills/anndata-seurat-conversion/: SKILL.md
skills/archs4/: SKILL.md
skills/boltz/: SKILL.md
skills/cellchat/: SKILL.md  references
skills/cellxgene/: SKILL.md
skills/cytetype/: SKILL.md
skills/deseq2-rna/: SKILL.md
skills/drugbank/: SKILL.md
skills/drugnomeai/: SKILL.md
skills/geneformer/: SKILL.md
skills/genetics-gsp/: SKILL.md  config.json  gsp_schema.json  gsp_tools.py  pyproject.toml
skills/genetics-gsp/data/: README.md
skills/genetics-gsp/references/: datasets.md
skills/genetics-ukbppp/: CHANGELOG.md  (+1 more)
(+367 files in other folders)
