[project]
name = "biobridge-skill"
version = "1.0.0"
description = "BioBridge knowledge graph link prediction skill for Claude Code"
readme = "SKILL.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "transformers>=4.30.0",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "requests>=2.28.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
    "sentencepiece>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
