[project]
name = "workflow-gsp"
version = "0.1.0"
description = "Genetics Support Profiler tools for target validation - biological and safety risk assessments"
readme = "SKILL.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "requests>=2.28.0",
]

[project.scripts]
workflow-gsp = "gsp_tools:main"

[tool.uv]
dev-dependencies = []
